# app-emipass

./: .copier-answers.yaml  .dockerignore  .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  flake.nix  gstreamer-plugins-rs.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  docker-build.yml  docker-push.yml  docs.yaml  docs.yml  image.yaml  registry.yaml  test.yaml
.trunk/: trunk.yaml
docs/: docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
emipass/: README.md  package-lock.json  package.json
emipass/docs/: mkdocs.yml  requirements.txt
emipass/docs/docs/: index.md  output.md  usage.md
emipass/src/: main.js  srt.js  start.sh  wrtc.js
plugins/python/: customwhipserversrc.py
src/emipass/: __main__.py  server.py  state.py
src/emipass/api/: app.py  validator.py
src/emipass/api/routes/: router.py
src/emipass/api/routes/ping/: controller.py  models.py  router.py  service.py
src/emipass/api/routes/stream/: controller.py  errors.py  models.py  router.py  service.py
src/emipass/config/: base.py  builder.py  models.py
src/emipass/services/ping/: models.py  service.py
src/emipass/services/streaming/: errors.py  models.py  runner.py  service.py
src/emipass/streaming/: errors.py  models.py  runner.py  streamer.py
tests/integration/: conftest.py  test_stream.py
